k8s-local/01-mongodb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-depl
  namespace: purely
  labels:
    app: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo:6.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-init-volume
              mountPath: /docker-entrypoint-initdb.d
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
      volumes:
        - name: mongo-init-volume
          configMap:
            name: mongodb-init-data
            defaultMode: 0755
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-svc
  namespace: purely
  labels:
    app: mongodb
spec:
  selector:
    app: mongodb
  ports:
    - port: 27017
      targetPort: 27017
      protocol: TCP
  type: ClusterIP
