k8s-local/02-service-registry.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry-depl
  namespace: purely
  labels:
    app: registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: registry
  template:
    metadata:
      labels:
        app: registry
    spec:
      containers:
        - name: registry-container
          image: purely/service-registry:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8761
          resources:
            requests:
              cpu: 150m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: registry-svc
  namespace: purely
  labels:
    app: registry
spec:
  selector:
    app: registry
  ports:
    - name: http
      port: 80
      targetPort: 8761
      protocol: TCP
    - name: eureka
      port: 8761
      targetPort: 8761
      protocol: TCP
  type: ClusterIP
