k8s-local/05-api-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-depl
  namespace: purely
  labels:
    app: gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
        - name: gateway-container
          image: purely/api-gateway:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 150m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-svc
  namespace: purely
  labels:
    app: gateway
spec:
  selector:
    app: gateway
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
    - name: gateway-port
      port: 8080
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
